# neovim

./: .gitignore  .tsan-suppress  CMakeLists.txt  Makefile  clint-files.txt
.ci/: clang.sh  gcc-32.sh  gcc.sh
cmake/: FindLibMsgpack.cmake  RunTests.cmake
config/: config.h.in
contrib/neovim_gdb/: README.md  neovim_gdb.vim
runtime/: optwin.vim
runtime/doc/: autocmd.txt  eval.txt  job_control.txt  nvim_intro.txt  nvim_terminal_emulator.txt  options.txt  various.txt
runtime/plugin/: expect.vim
scripts/: auto-declare.lua  compile-msgpack.sh  embed.lua  msgpack-gen.lua  run-api-tests.exp  setup-test-tools.sh  travis.sh
src/: CMakeLists.txt  api.c  api.h  edit.c  eval.c  ex_getln.c  getchar.c  globals.h  if_cscope.c  main.c  map.c  mbyte.c  memline.c  memory.c  memory.h  misc1.c  misc1.h  misc2.c  msgpack_rpc.c  msgpack_rpc.h  msgpack_rpc_defs.h  normal.c  os_unix.c  os_unix.h  os_unix_defs.h  signals.c  structs.h  term.c  ui.c  version.c  vim.h
src/api/: defs.h  tabpage.c  tabpage.h  vim.c  vim.h  window.c  window.h
src/nvim/: CMakeLists.txt  buffer.c  buffer.h  buffer_defs.h  diff.c  edit.c  eval.c  eval.h  ex_cmds.c  ex_cmds.lua  ex_cmds2.c  ex_cmds_defs.h  ex_docmd.c  ex_getln.c  fileio.c  fileio.h  fold.c  func_attr.h  getchar.c  globals.h  hardcopy.c  heap.c  heap.h  keymap.c  log.c  macros.h  main.c  map.c  map.h  mark.c  memline.c  memory.c  memory.h  menu.c  message.c  misc1.c  misc2.c  mouse.c  mouse.h  normal.c  (+29 more)
src/nvim/tui/: CMakeLists.txt  input.c  input.h  term_input.inl  tui.c
src/os/: channel.c  input.c  input.h  io.c  io.h  msgpack_rpc.c  os.h  time.c  (+5 more)
(+142 files in other folders)
